--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "snap": "git add . && git commit -m 'mod' && git push origin main && npm run build && npm run deploy"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
