--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "snap": "git add . && git commit -m 'mod' && git push origin main && npm run build && npm run deploy"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.16",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
