--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
+    "react-social-icons": "^6.22.0",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6"
   },
