--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "snap": "git add . && git commit -m 'mod' && git push origin main && npm run build && npm run deploy"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.4.0",
     "react-social-icons": "^6.22.0",
     "styled-components": "^6.1.16",
