--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "snap": "git add . && git commit -m 'mod' && git push origin main && npm run build && npm run deploy"
   },
   "dependencies": {
-    "@yudiel/react-qr-scanner": "^2.2.1",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.483.0",
@@ -23,7 +22,8 @@
     "react-router-dom": "^7.4.0",
     "react-social-icons": "^6.22.0",
     "styled-components": "^6.1.16",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
