--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-social-icons": "^6.22.0",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
-    "uniqid": "^5.4.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
