--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "firebase": "^11.6.1",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
