--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "firebase": "^11.6.1",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
@@ -28,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
